# Archon-SuperNova

./: .gitignore
archon-open-metadata-build-deployment/: README.md
archon-open-metadata-design/: design.txt  metaanalyzer_professional_nav.html  metadata_analysis_platform_ui.html
archon-open-metadata-fe/: README.md  angular.json  build_logs.txt  chop.py  clean_app.py  clean_app_ts.py  final_chop.py  fix.py  fix_again.py  fix_all.py  fix_app.py  fix_app_ts.py  fix_audit_error.py  fix_components.py  fix_dashboard_router.py  fix_dm.py  fix_html.py  fix_html_dm.py  fix_html_emits.py  fix_jp.py  fix_progress.py  fix_routing.py  (+7 more)
archon-open-metadata-py/: main.py  main_data_analysis.py  pyproject.toml  setup_archon_py.sh
archon-open-metadata-py/pipeline/: pyproject.toml
archon-open-metadata-py/pipeline/config/: default.yaml
archon-open-metadata-py/pipeline/sql/: results_schema.sql
archon-open-metadata-py/pipeline/src/discovery/: candidates.py  cleanup.py  clustering.py  composite_fk.py  exclusions.py  inheritance.py  jsonb_fk.py  metrics.py  models.py  name_similarity.py  pii_patterns.py  pii_score.py  report.py  scoring.py  type_class.py
archon-open-metadata-py/pipeline/tests/: conftest.py  test_candidate_generator.py  test_cleanup.py  test_cli.py  test_composite_fk.py  test_config_interpolation.py  test_exclusions.py  test_imports.py  test_jsonb_fk.py  test_metrics.py  test_metrics_helpers.py  test_name_similarity.py  test_orchestrator.py  test_orchestrator_clustering.py  test_pii_locale.py  test_pii_patterns.py  test_pii_priors.py  test_pii_score.py  test_polymorphic_fk.py  test_report.py  test_run_log.py  test_scoring.py  test_type_class.py  test_validate.py
archon-open-metadata-py/src/: constants.py  ml_data_router.py  ml_router.py  models.py
archon-open-metadata-py/src/column_detection/: __init__.py  schema_parser.py
archon-open-metadata-py/src/data_based/: __init__.py
archon-open-metadata-py/src/data_based/cardinality/: __init__.py  cardinality_classifier.py
archon-open-metadata-py/src/data_based/clustering/: __init__.py  clustering_core.py  domain_vocab.py  louvain_clusterer.py
archon-open-metadata-py/src/data_based/column_typing/: __init__.py  column_type_classifier.py
archon-open-metadata-py/src/data_based/composite_fk/: __init__.py  composite_fk_finder.py
archon-open-metadata-py/src/data_based/data_quality/: __init__.py  data_quality_classifier.py
archon-open-metadata-py/src/data_based/exclusions/: __init__.py  exclusion_filter.py
archon-open-metadata-py/src/data_based/name_similarity/: __init__.py  name_similarity_scorer.py
archon-open-metadata-py/src/data_based/pii_detection/: __init__.py  pii_iin.py  pii_scanner.py  pii_score.py
archon-open-metadata-py/src/data_based/polymorphic_fk/: __init__.py  polymorphic_fk_finder.py
archon-open-metadata-py/src/data_based/schema_patterns/: __init__.py  schema_pattern_detector.py
archon-open-metadata-py/src/data_classification/: __init__.py  entity_classifier.py
archon-open-metadata-py/src/data_grouping/: __init__.py  domain_grouper.py
archon-open-metadata-py/src/relationship_detection/: __init__.py  candidate_matcher.py  semantic_scorer.py
archon-open-metadata-py/src/sample_data_detection/: __init__.py  cardinality_extractor.py
archon-open-metadata-py/src/sample_data_sensitive_analysis/: __init__.py  data_analyzer.py
archon-open-metadata-py/src/sensitive_analysis/: __init__.py  column_analyzer.py
backend/python/pipeline/: .gitignore  README.md  pyproject.toml
backend/python/pipeline/sql/: results_schema.sql
backend/python/pipeline/src/discovery/: __main__.py  candidates.py  cardinality_probe.py  cli.py  clustering.py  config.py  data_quality.py  extraction.py  extraction_client.py  fallbacks.py  fingerprint.py  inventory.py  logging_setup.py  models.py  orchestrator.py  pii_leak.py  pii_locale.py  pii_ner.py  pii_patterns.py  pii_priors.py  pii_propagation.py  pii_scan.py  pii_score.py  polymorphic_fk.py  results_db.py  run_log.py  schema_patterns.py  validate.py
backend/python/pipeline/tests/: test_cardinality_probe.py  test_clustering.py  test_clustering_hybrid.py  test_credential_priors.py  test_data_quality.py  test_extraction.py  test_extraction_client.py  test_fallbacks.py  test_fingerprint.py  test_inheritance.py  test_inventory.py  test_inventory_joiner.py  test_pci_priors.py  test_pii_matcher.py  test_redaction.py  test_results_db_unexclude.py  test_schema_patterns.py
backend/python/pipeline/tests/fixtures/: seed_source.sql
backend/python/synthetic-data/: README.md  pyproject.toml  seed_postgres_500.py  seed_postgres_adv.py  seed_postgres_dvdrental.py  seed_postgres_hr.py  seed_postgres_polymorphic.py  seed_postgres_saleor.py
backend/python/synthetic-data/src/synthetic_data/: __init__.py  __main__.py  cli.py  config.py  distributions.py  manifest.py  metadata.py  relationships.py  runner.py
backend/python/synthetic-data/src/synthetic_data/generators/: __init__.py  base.py  catalog.py  customers.py  edge.py  hr.py  identity.py  noise.py  orders.py  support.py
backend/python/synthetic-data/src/synthetic_data/pii/: __init__.py  credit_cards.py  free_text.py  iban.py  phone.py  ssn.py
backend/python/synthetic-data/tests/: test_determinism.py  test_fk_containment.py  test_manifest_schema.py  test_pii_validity.py  test_schema_consistency.py
(+368 files in other folders)
