[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery"
version = "1.0.0"
description = "Undeclared-FK and PII discovery pipeline"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Discovery Team" }
]
keywords = [
    "foreign-key",
    "discovery",
    "pii-detection",
    "data-quality",
    "duckdb",
    "parquet"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring"
]

dependencies = [
    "httpx>=0.27",
    "pyarrow>=15",
    "duckdb>=0.10",
    "xxhash>=3.4",
    "datasketch>=1.6.5",
    "faiss-cpu>=1.7.4",
    "hyperscan>=0.7.7; platform_system != 'Windows'",
    "python-stdnum>=1.19",
    "python-luhn>=0.2",
    "detect-secrets>=1.5",
    "psycopg2-binary>=2.9",
    "SQLAlchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24",
    "tenacity>=8",
    "prometheus-client>=0.20",
    "pyyaml>=6",
    "rich>=13",
    "pandas>=2.2",
    "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-pyyaml>=6",
    "types-requests>=2",
    "black>=23",
    "testcontainers[postgresql]>=4"
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "testcontainers>=4",
    "httpx"
]
# Locale-aware PII validators — phonenumbers powers the global PHONE entity
# recogniser.  CPU-only, ~6 MB; falls back to dual PHONE_US/PHONE_E164 regex
# when missing.
pii-locale = [
    "phonenumbers>=8.13"
]
# Optional NER pass — requires `python -m spacy download en_core_web_sm`
# after install.  Adds ~13 MB.
pii-ner = [
    "spacy>=3.7"
]
# Optional semantic-similarity for FK candidate generation.  Pulls
# sentence-transformers (CPU-only) and the all-MiniLM-L6-v2 model (~80 MB).
# Falls back to lexical similarity automatically when the package or model
# isn't available — this extra is purely opt-in for accuracy lifts.
semantic = [
    "sentence-transformers>=2.5"
]

[project.scripts]
discovery = "discovery.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "RUF"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # assert-used (fine for tests)
    "S104",  # hardcoded-bind-all-interfaces (config-driven)
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=discovery --cov-report=term-missing"
markers = [
    "integration: requires testcontainers (deselect with -m 'not integration')"
]

[tool.coverage.run]
source = ["src/discovery"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]
