[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthetic-data"
version = "1.0.0"
description = "Synthetic Parquet data generator for discovery pipeline POC"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=15",
    "faker>=24",
    "python-stdnum>=1.19",
    "numpy>=1.26",
    "rich>=13",
    "pydantic>=2",
    "typer>=0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-timeout>=2",
]

[project.scripts]
synthetic-data = "synthetic_data.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
